--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,57 @@
 /*  your css code here. If applicable */
+/* Reset some default styles for the HTML elements */
+html, body, h1, h2, h3, p, ul, li {
+    margin: 0;
+    padding: 0;
+}
+
+/* Define overall styles for the layout */
+body {
+    font-family: Arial, sans-serif;
+}
+.container{
+	display:flex;
+	flex-direction:row;
+}
+.nav_bar{
+	 flex: 1;
+	    padding: 1em;
+	background-color:#D7E8D4; 
+	min-width:calc(1/6 * 100vw);
+}
+.header,.footer{
+	background-color:yellowgreen;
+	min-height:calc(1/5 * 100vh);
+	    padding: 1em;
+
+}
+.main_content{
+	flex:4;
+	display:flex;
+	flex-direction:column;
+}
+.content_section {
+	min-width:calc(4/5 *100vw);
+	display:flex;
+	flex-direction:row;
+}
+.article{
+	flex:3;
+	padding: 1em;
+	min-width:calc(3/4 * 100vw);
+	min-height:60vh;
+}
+.aside{
+	background-color:gray;
+	flex: 1; /* Updated to take up 1/4th of the width of the content section */
+   /* Set your desired background color */
+    padding: 1em;
+}
+@media(max-width: 768px){
+	.container{
+		flex-direction:column;
+	}
+	.nav_bar{
+        min-width: auto; /* Full width on smaller screens */
+    }
+}
