--- a/styles.css
+++ b/styles.css
@@ -35,22 +35,13 @@ body {
 	display:flex;
 	flex-direction:row;
 }
-.article{
+.content_section > article{
 	flex:3;
 	padding: 1em;
-	
 	min-height:60vh;
 }
 .aside{
 	background-color:gray;
 	flex: 1; 
     padding: 1em;
-}
-@media(max-width: 768px){
-	.container{
-		flex-direction:column;
-	}
-	.nav_bar{
-        min-width: auto; /* Full width on smaller screens */
-    }}
 }
