--- a/styles.css
+++ b/styles.css
@@ -30,12 +30,12 @@ body {
 	display:flex;
 	flex-direction:column;
 }
-.content_section {
+.content {
 	min-width:calc(4/5 *100vw);
 	display:flex;
 	flex-direction:row;
 }
-.content_section > article{
+.content > article{
 	flex:3;
 	padding: 1em;
 	min-height:60vh;
